--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "sojitra mit",
   "license": "ISC",
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
@@ -21,6 +22,8 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.2",
+    "razorpay": "^2.9.6",
+    "socket.io": "^4.8.3",
     "validator": "^13.15.26"
   }
 }
